--- a/Registrar/Registrar.csproj
+++ b/Registrar/Registrar.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.2" />
+    <PackageReference Include="MySqlConnector" Version="0.42.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,5 +21,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="ViewModels\" />
+    <Folder Include="Views\Students\" />
+    <Folder Include="Views\Courses\" />
   </ItemGroup>
 </Project>
