fix student courses render details

--- a/Registrar/Registrar.csproj
+++ b/Registrar/Registrar.csproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="Views\Students\" />
-    <Folder Include="Views\Courses\" />
+    <Folder Include="Views\Student\" />
+    <Folder Include="Views\Course\" />
   </ItemGroup>
 </Project>
